# SOLPlay

./: README.md  app.js  database.py  main.py  payforsong.html  pyproject.toml  qrcode.html  replit.nix  replit_zip_error_log.txt  templateslogin.html  transactions.py
templates/: dashboard.html
